--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.12",
     "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
