--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "next": "^15.5.2",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
