--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "next": "^15.5.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
