--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
