--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
     "next": "^15.5.2",
+    "openai": "^5.23.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.12",
